# open_cl_test

./: .gitignore  CMakeLists.txt  CMakeLists_Friedrich.txt  README.md  image_processing  image_processing.c  main.cpp
backup/intel/: results.csv
backup/m2pro/: results.csv
visualize/: README.md  main.py
